--- a/src/styles/panelusuario.css
+++ b/src/styles/panelusuario.css
@@ -107,5 +107,20 @@ body {
     background-color: #90caf9;
     cursor: not-allowed;
   }
+
+  .eliminar-btn {
+    background-color: #e74c3c;
+    color: white;
+    border: none;
+    padding: 6px 12px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+    transition: background-color 0.2s ease;
+  }
+  
+  .eliminar-btn:hover {
+    background-color: #c0392b;
+  }
   
   
